[project]
name = "photon-net"
version = "0.0.1"
description = "Python bindings for Photon network library"
authors = [
    {name = "Jonas Minnberg", email="sasq64@gmail.com"}
]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/sasq64/photon-py"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

